--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.11</java.version>
+        <java.version>11</java.version>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
